--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,119 @@
-@import-normalize; /* bring in normalize.css styles */
+@import-normalize;
+
+/* bring in normalize.css styles */
 
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+ul {
+    list-style: none;
+}
+
+a {
+    color: black;
+}
+
+h1,
+h2,
+h3,
+p,
+ul {
+    margin: 0;
+    padding: 0;
+}
+
+nav {
+    border-bottom: 2px solid violet;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    font-size: 34px;
+    font-weight: bold;
+    font-style: italic;
+}
+
+.active {
+    color: blueviolet;
+}
+
+.loader {
+    color: red;
+}
+
+.navList {
+    display: flex;
+}
+
+.navList li:not(:last-child) {
+    margin-right: 20px;
+}
+
+.bookList li {
+    font-size: 18px;
+    margin-bottom: 15px;
+}
+
+h1 {
+    text-align: center;
+    font-size: 48px;
+    font-weight: bold;
+    font-style: italic;
+    margin-bottom: 50px;
+}
+
+button {
+    margin-top: 24px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    padding: 15px;
+    border: none;
+    border-radius: 4px;
+    background-color: rgb(101, 49, 113);
+    color: #fff;
+    font-size: 18px;
+}
+
+.thumb {
+    width: 450px;
+    text-align: center;
+    padding: 34px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.thumb img {
+    width: 250px;
+    margin-bottom: 48px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+input {
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    outline: none;
+}
+
+
+/* Зміна стилю при фокусі */
+
+input:focus {
+    border-color: #007bff;
+    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
 }
